Corrected grammar and created file for report

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -123,7 +123,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\section{Future of the Browser}
 	Nowadays there are already many ways to interact with a browser which seems rather futuristic. You can control via voice or by hand gestures. You are not just having you browser on your Computer but also on your phone, your watch and floating in the air in front of you.
 		\subsection{Browsers becoming operating systems}
-	One of Alan Kay's primary criticisms about the Web is the absence of a computational ability for the browser. His vision is for them to be like mini-operating systems and be able to execute locally. So it is possible, for example, to learn a programming languagewith just writing code on the website and execute it on the computer. The patches were already steps into the proper direction. Another part is to establish websites to be like applications and with web applications such as google docs or Microsoft office home, the browser is going towards that vision. These make it possible to create, send and receive content such as documents or tables while other people access them simultaneously. It is for sure that more applications like these will be released.
+	One of Alan Kay's primary criticisms about the Web is the absence of a computational ability for the browser. His vision is for them to be like mini-operating systems and be able to execute locally. So it is possible, for example, to learn a programming language with just writing code on the website and execute it on the computer. The patches were already steps into the proper direction. Another part is to establish websites to be like applications and with web applications such as google docs or Microsoft office home, the browser is going towards that vision. These make it possible to create, send and receive content such as documents or tables while other people access them simultaneously. It is for sure that more applications like these will be released.
 	A good example for a website supporting Alan Kay's vision is lively-web.org, an open source web programming environment.
 	Everything that is displayed on the website represents an object and can be changed, moved or overwritten and provides immediate feedback to the user. Every text field is able to execute JavaScript. Users can create their own website or application and are capable to edit and download it from everywhere without having to install any software.
 	[16][26]
@@ -140,7 +140,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			\end{center}
 			\subsubsection{AR Browsers}
 				\leavevmode\newline
-				An AR Browser is an application, like any other Browser. The difference is, that AR Browsers are for phone or tablet use only. Their purpose is to display additional informations on a camera screen. These Informations, can be 2D markers or 3D objects, for example.Just like most of VR Browsers, they also rely on content creators. 
+				An AR Browser is an application, like any other Browser. The difference is, that AR Browsers are for phone or tablet use only. Their purpose is to display additional informations on a camera screen. These informations, can be 2D markers or 3D objects, for example.Just like most of VR Browsers, they also rely on content creators. 
 				[29]
 			\subsubsection{Smartwatches}
 			\leavevmode\newline
@@ -153,7 +153,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			\end{center}
 		\subsection{Quantum computing}
 		\leavevmode\newline
-		Another prominent topic of these times is quantum computing. Quantum computers would make it significantly easier to decrypt keys for the secure transport of data between the browser and external servers. That explains the reason why, since a couple of years institutes around the world, have been looking for algorithms, that are post-quantum secures. It is indicated, that their generated keys can withstand the decryption of an quantum computer longer than algorithms nowadays such as RSA. Browsers will need to adapt to these changes in order to assure security for its customers and stay competitive in the market.
+		Another prominent topic of these times is quantum computing. Quantum computers would make it significantly easier to decrypt keys for the secure transport of data between the browser and external servers. That explains the reason why, since a couple of years institutes around the world, have been looking for algorithms, that are post-quantum secures. It is indicated, that their generated keys can withstand the decryption of a quantum computer longer than algorithms nowadays such as RSA. Browsers will need to adapt to these changes in order to assure security for its customers and stay competitive in the market.
 			[32]
 		\subsection{Next steps for Browsers}
 			Since the introduction of the browser many changes have been made. It gained on speed, performance, security and usability. These attributes will certainly grow in the future.
@@ -166,10 +166,10 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		 	However at the same time the vision of Alan Key has yet to be met.
 			Even though the steps are modest, Browsers are becoming more and more similar to operating systems and closer to the initial vision of Alan Key. But they still have a long way to develop since they were not designed for that purpose.
 			\newline
-			Web 3.0 is supposed to support the user to deal with the amount of information on the Web. This might also force Browsers to make a change yet neither into which direction nor to what degree can be determined at this stage. We might indeed observe a completely experimental type though it is nessecary to be initiated by one of the major browser companies.[33]
+			Web 3.0 is supposed to support the user to deal with the amount of information on the Web. This might also force Browsers to make a change, yet neither into which direction nor to what degree can be determined at this stage. We might indeed observe a completely experimental type though it is necessary to be initiated by one of the major browser companies.[33]
 	\section{Conclusion}	
-	The first browser was introduced in 1990. By Tim Berners-Lee, with the purpose, to act as an editor for HTML and to view the contents of the Web. After that, the number of different browsers increased shortly and the plain text-based browser was replaced by the graphical browser. The next topic included the basic technologies of all browsers, namely HTTP, HTML and URL, as well as the Patches of the Web. Basic features of the browsers, such as Tabs, Bookmarks or the Incognito mode were introduced. Finally, the report took a look at modern and newer technologies which showed how browsers constantly need to reinvent themselves to stay relevant for the future.
-	The Browser is an application which can not be forgotten on any modern operating system these days, as it is one of the standard programs that is already installed from the beginning. The way we are connected nowdays, is based on that software. After the user installed a operating system one of the first actions is opening the browser, which cennect him to the rest of the world.
+	The first browser was introduced in 1990. By Tim Berners-Lee, with the purpose, to act as an editor for HTML and to view the contents of the Web. After that, the number of different browsers increased shortly and the plain text-based browser was replaced by the graphical browser. The next topic included the basic technologies of all browsers, namely HTTP, HTML and URL, as well as the Patches of the Web. Basic features of the browsers, such as Tabs, Bookmarks or the Incognito mode were introduced. Finally, the report looked at modern and newer technologies which showed how browsers constantly need to reinvent themselves to stay relevant for the future.
+	The Browser is an application which can not be forgotten on any modern operating system these days, as it is one of the standard programs that is already installed from the beginning. The way we are connected nowadays, is based on that software. After the user installed a operating system one of the first actions is opening the browser, which connect him to the rest of the world.
 	\newline
 	Nevertheless, it is expected that this application is to become eventually a full-grown operating system itself, throughout its Evolution to fulfill the vision of Alan Key.
 	\section{Sources}
