Changed definition of the browsers in fear of copyright

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -22,7 +22,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\end{abstract}
 
 	\section{Definition}
-		A Browser is an application that interprets HTML documents and data to render them to a Web page making the Web accessible. A browser allows you to navigate websites and perform activities within them like login, view multimedia, link from one site to another, visit one page from another, print, send and receive email, among many other activities. The most common browser software titles on the market are: Microsoft Internet Explorer, Google's Chrome, Mozilla Firefox, Apple's Safari, and Opera. Browser availability depends on the operating system your computer is using.
+		A Browser represents an application that interprets HTML documents and data to render them to a Web page making the Web accessible. A browser grants the user the ability to navigate websites and perform activities within them like view multimedia, link from one site to another, examine one page from another, print documents from said pages, send and receive emails, among many other activities. The most typical browsers are Google Chrome, Mozilla Firefox and Internet Explorer but there exist many more lesser known browsers.
 		%Book site 52,https://de.wikipedia.org/wiki/Webbrowser
 	\section{History}
 		\subsection{The first browsers}
