Changed some text in fear of copyright problems

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -58,14 +58,14 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\begin{center}
 			\textit{\textbf{A market share timeline from 2009 to 2019 for the most used browsers.[14]}}
 		\end{center}
-		
+
 		\subsection{Browser nowadays}
 		Today Google Chrome dominates the browser market, with roughly 60\%-65\%. Next up is Mozilla Firefox according to the data, with 5\%-8\%. After that comes  Internet Explorer and its successor Microsoft Edge, both with around 5\%-7\%. Every other browser has less than 5\% market share. Another fact to mention is that most browser use Chromium, the browser engine of Google, including Opera, Microsoft Edge and other browsers. The only widely used browsers that don't use Chromium are Mozilla Firefox and Safari.\\
 		\includegraphics[scale=0.3]{meta-chart.jpeg}\\
 		\begin{center}
 			\textit{\textbf{The market share value of the different browsers from June 2019. [15]}}
 		\end{center}
-		
+
 	\section{Evolution}
 		\subsection{The meaning of Evolution}
 		With the release of every new browser and browser version, features and improvements have been added. Browsers became more secured, user and developer friendly, and more efficient. These were implemented by the developers since new technologie being release, bugs discovered and in order to stay competetive. All these changes included in a timeline create the Evolution of the Browser.
@@ -78,13 +78,13 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\textit{HTML} is the abbreviation for HyperText Markup Language. Tim Berners-Lee made this textual format for annotating plain text with informations part of his original Web proposal, and created the first editor and at the same time the first browser around HTML. The first proposal for HTML is dated back to 1993, but today HTML 5 exists; which was standardized in 2014. [16]
 		\subsubsection{URL}
 		\leavevmode\newline
-		\textit{URL} is the short form for Uniform Resource Locator. The \textit{URL} gives the address where specific resources are located in the Internet and the protocol to access it. The URL contains, furthermore, the port number to access the address, the location of the resource in the server and a fragment identifier [17]. The \textit{URL} is also one part of the initial proposal of the Web from Tim Berners-Lee. 
+		\textit{URL} is the short form for Uniform Resource Locator. The \textit{URL} gives the address where specific resources are located in the Internet and the protocol to access it. The URL contains, furthermore, the port number to access the address, the location of the resource in the server and a fragment identifier [17]. The \textit{URL} is also one part of the initial proposal of the Web from Tim Berners-Lee.
 		%TODO: Move to another location?
 		\subsubsection{Browser Engines}
 		\leavevmode\newline
-		The browser engine, also called "layout engine" or "rendering engine", is the core component of most major web browsers. The job of a browser engine is the transformation of HTML files and other required resources to an interactive web page. While it is possible to separate the engine for the layout and the rendering of the page, in practice they are mostly coupled and not separated. The browser engine is equally responsible for enforcing the web pages security policy and creating the DOM data structure used in scripts. It is also responsible for handling hyperlinks and web forms.
-		Browser engines may also be reused in other application. An email client, for example, may use such an engine for rendering HTML emails. Another example is the "Electron Framework", which uses the engine of \textit{Google Chrome}, used to create many applications. The layout to be rendered is specified by the CSS file of the web page. There are several different browser engine implementations and the most major web browsers use their own browser engine. Examples are Gecko by Mozilla, WebKit by Apple and Blink by Google. Microsoft used to have their own browser engines Trident and EdgeHTML, but use Googles Blink browser engine now.[18]
-		
+		The browser engine, also called "layout engine" or "rendering engine", is the core component of most major web browsers. 	The browser engine is used to render an interactive web page out of the HTML file and other additional ressources like the stylesheet. While it is possible to separate the engine for the layout and the rendering of the page, in practice they are mostly coupled and not separated. The browser engine is equally responsible for enforcing the web pages security policy and creating the DOM data structure used in scripts. It is also responsible for handling hyperlinks and web forms.
+		The capability of such a browser engine may also be reused for other applications. An email client, for example, may use such an engine for rendering HTML emails. Another example is the "Electron Framework", which uses the engine of \textit{Google Chrome}, used to create many applications. The layout to be rendered is specified by the CSS file of the web page. There are several different browser engine implementations and the most major web browsers use their own browser engine. Examples are Gecko by Mozilla, WebKit by Apple and Blink by Google. Microsoft used to have their own browser engines Trident and EdgeHTML, but use Googles Blink browser engine now.[18]
+
 		\subsection{How Patches influenced Browsers}
 			\begin{quote}``I call such changes patches, as they are attempts to fix the original design of the web'' Marco Aiello The Web was Done by Amateurs (2018, p. 65)\end{quote}
 		By changing the Web, patches also influenced browsers when they were introduced. Following shows a summary of what these patches were and how browsers evolved and adapted through these changes.
@@ -101,14 +101,14 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			While it would have been possible to couple the handling of JavaScript to the browser engine, every major browser uses a dedicated script engine. This is due to the fact, that JavaScript, while originally created for use in web browsers, is now also used elsewhere. In the web browser these two engines interact with each other through the shared DOM data structure.
 			The first JS engines started with bare interpreters and evolved to full engines with several additional features. The first JavaScript engine was developed by Brendan Eich, co-founder of the Mozilla project, in 1995 for \textit{Netscape}. It was a bare interpreter for the language he was inventing at this time. The first modern JavaScript engine was Googles V8 engine, created for Chrome in 2008. The key innovations were just-in-time compilation, boosting performance significantly. As a result other browser vendors had to overhaul their interpreters to develop into full JavaScript engines. This leads to the development of the Nitro engine for Apples \textit{Safari} browser. Mozilla used portions of Nitro to improve SpiderMonkey, which resulted from Brendan Eichs original JavaScript interpreter. Opera replaced their interpreter with their Carakan engine, also boosting performance significantly.
 			Since 2017 all major browser have added support for WebAssembly to their JavaScript engines. This gives the ability to execute pre-compiled scripts for performance-critical parts of the web page. The code is executed in the same sandbox as the regular JS code.[20]
-			
+
 		\subsection{Features}
 			\subsubsection{Incognito mode}
 			\leavevmode\newline
 			Private browsing was first added in 2005 by \textit{Safari} on Mac. The feature has since been adapted by many other browsers so that most modern browsers have some form of private browsing.[21]
 			\subsubsection{Bookmarks}
 			\leavevmode\newline
-			Bookmarks were a quite early feature and have been included since \textit{Mosaic} in 1993, although called hotlists back then. Moderner browsers have expanded the feature of bookmarks. \textit{Firefox} for example, introduced so called "Live Bookmarks" which are essentially bookmarks provided as RSS feed.[22]
+			Bookmarks were a quite early feature and have been included since \textit{Mosaic} in 1993, although called hotlists back then. The feature of bookmarks has been extended with the further development of modern browsers. \textit{Firefox} for example, introduced so called "Live Bookmarks" which are essentially bookmarks provided as RSS feed.[22]
 			\subsubsection{Browser Extensions}
 			\leavevmode\newline
 			As the first major browser, \textit{Internet Explorer} introduced browser extensions with Version 5 in 1999. The other major browsers also included extensions over the years with Firefox in 2004, Opera in 2009 and Google Chrome and Safari in 2010. Currently most browsers support extensions to customize the user experience.[23]
@@ -140,16 +140,16 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			\end{center}
 			\subsubsection{AR Browsers}
 				\leavevmode\newline
-				An AR Browser is an application, like any other Browser. The difference is, that AR Browsers are for phone or tablet use only. Their purpose is to display additional informations on a camera screen. These informations, can be 2D markers or 3D objects, for example.Just like most of VR Browsers, they also rely on content creators. 
+				An AR Browser is an application, like any other Browser. The difference is, that AR Browsers are for phone or tablet use only. Their purpose is to display additional informations on a camera screen. These informations, can be 2D markers or 3D objects, for example.Just like most of VR Browsers, they also rely on content creators.
 				[29]
 			\subsubsection{Smartwatches}
 			\leavevmode\newline
-			With the release of smartwatches, companies needed to discover yet another way to display browsers. The portable screen does not offer enough space, to fit the usual user interface or keyboard. One way is adding a website on a connected device to the favorite list so it is possible to navigate the website by just one touch on your watch.	
+			With the release of smartwatches, companies needed to discover yet another way to display browsers. The portable screen does not offer enough space, to fit the usual user interface or keyboard. One way is adding a website on a connected device to the favorite list so it is possible to navigate the website by just one touch on your watch.
 			 However it is possible to connect the smartphone with the watch and use its keyboard.[30]
 			\begin{center}
 				\includegraphics[scale=0.35]{Smartwatch.jpg}
-				
-				[31] Web Browser for Wear OS on Android	
+
+				[31] Web Browser for Wear OS on Android
 			\end{center}
 		\subsection{Quantum computing}
 		\leavevmode\newline
@@ -162,12 +162,12 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		 		\includegraphics[scale=0.35]{OperaNeon.png}
 		 		Startscreen of Opera Neon
 		 	\end{center}
-		 	
+
 		 	However at the same time the vision of Alan Key has yet to be met.
 			Even though the steps are modest, Browsers are becoming more and more similar to operating systems and closer to the initial vision of Alan Key. But they still have a long way to develop since they were not designed for that purpose.
 			\newline
 			Web 3.0 is supposed to support the user to deal with the amount of information on the Web. This might also force Browsers to make a change, yet neither into which direction nor to what degree can be determined at this stage. We might indeed observe a completely experimental type though it is necessary to be initiated by one of the major browser companies.[33]
-	\section{Conclusion}	
+	\section{Conclusion}
 	The first browser was introduced in 1990. By Tim Berners-Lee, with the purpose, to act as an editor for HTML and to view the contents of the Web. After that, the number of different browsers increased shortly and the plain text-based browser was replaced by the graphical browser. The next topic included the basic technologies of all browsers, namely HTTP, HTML and URL, as well as the Patches of the Web. Basic features of the browsers, such as Tabs, Bookmarks or the Incognito mode were introduced. Finally, the report looked at modern and newer technologies which showed how browsers constantly need to reinvent themselves to stay relevant for the future.
 	The Browser is an application which can not be forgotten on any modern operating system these days, as it is one of the standard programs that is already installed from the beginning. The way we are connected nowadays, is based on that software. After the user installed a operating system one of the first actions is opening the browser, which connect him to the rest of the world.
 	\newline
@@ -206,7 +206,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\newline
 	[15] \url{https://netmarketshare.com/browser-market-share.aspx}, used 01.07.2019
 	\newline
-	[16] "The Web Was Done by Amateurs" by Marco Aiello, ISBN 978-3-319-90007-0 
+	[16] "The Web Was Done by Amateurs" by Marco Aiello, ISBN 978-3-319-90007-0
 	\newline
 	[17] \url{https://www.techopedia.com/definition/1352/uniform-resource-locator-url}, 25.06.2019
 	\newline
@@ -243,7 +243,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\newline
 	[28]
 	\url{https://www.supermedium.com/#gallery_1-1}
-	\newline	
+	\newline
 	[29] \url{https://www.augmented-minds.com/de/erweiterte-realitaet/ar-app-und-ar-browser/}, used 26.06.19
 	\newline
 	[30]
